add route /vocabularies/readFromCsvFile
